Agregado imagenes, titulos y descripcion de servicios con excepcion de 2 faltantes

--- a/pagina/templates/pagina/index.html
+++ b/pagina/templates/pagina/index.html
@@ -31,7 +31,7 @@
             <img src="assets/img/logo.png" alt="Global">
             <p>Global</p>
           </a>
-          <button class="header--cta cta">Hire Us</button>
+          <button class="header--cta cta">Contáctanos</button>
           <div class="header--nav-toggle">
             <span></span>
           </div>
@@ -84,55 +84,55 @@
                   <li class="slider--item slider--item-left">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="{% static 'img/work-victory.jpg' %}" alt="Victory">
+                        <img src="{% static 'img/HW.svg' %}" >
                       </div>
-                      <p class="slider--item-title">Desarrollo de software para startups</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Implementación de hardware</p> <!-- imagen de implementacion de HW -->
+                      <p class="slider--item-description" style="text-align:justify;font-size:90%;">Methriks ofrece el servicio de instalación y matenimiento de hardware en laboratorios de computación, oficinas, negocios y centros educativos.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="{% static 'img/work-metiew-smith.jpg' %}" alt="Metiew and Smith">
+                        <img src="{% static 'img/SWM.jpg' %}" > <!-- imagen de desarrollo de software -->
                       </div>
-                      <p class="slider--item-title">Desarrollo de software empresarial</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Desarrollo de software a la medida</p>
+                      <p class="slider--item-description" style="text-align:justify;font-size:90%;">Sistemas a la medida multiplataforma para distintos tipos de empresas, utilizando lo último en tecnologías de desarrollo, otorgándoles a nuestros clientes soluciones de calidad a sus problemas.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="{% static 'img/work-alex-nowak.jpg' %}" alt="Alex Nowak">
+                        <img src="{% static 'img/APP.jpg' %}" > <!-- imagen de desarrollo de APP -->
                       </div>
-                      <p class="slider--item-title">Asesorias tecnologicas</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Desarrollo de aplicaciones móviles</p>
+                      <p class="slider--item-description" style="text-align:justify;font-size:90%;">Desarrollo de aplicaciones móviles a la medida para los sistemas operativos más populares del mercado (iOS, Android y Windows Phone).</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="{% static 'img/work-alex-nowak.jpg' %}" alt="Alex Nowak">
+                        <img src="{% static 'img/Startup.jpg' %}"> <!-- imagen de desarrollo de software startups -->
                       </div>
-                      <p class="slider--item-title">Cableado estructurado</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Soluciones tecnológicas para Startups</p>
+                      <p class="slider--item-description" style="text-align:justify;font-size:90%;">Methriks codifica tus ideas y las convierte en el software o aplicación que tanto sueñas. Ofrecemos un equipo de ingenieros expertos para el desarrollo parcial o total del proyecto de tu Startup.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="{% static 'img/work-alex-nowak.jpg' %}" alt="Alex Nowak">
+                        <img src="{% static 'img/CCE.png' %}"> <!-- imagen de conferencias C. Educativos -->
                       </div>
-                      <p class="slider--item-title">Talleres y conferencias tecnologicas</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Conferencias para centros educativos</p>
+                      <p class="slider--item-description" style="text-align:justify;font-size:90%;">Aprende y prepárate para el futuro, infórmate y conoce más sobre las nuevas tecnologías con nuestras conferencias especializadas y a la medida de lo que deseas aprender. Tus alumnos lo agradecerán.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="{% static 'img/work-alex-nowak.jpg' %}" alt="Alex Nowak">
+                        <img src="{% static 'img/TCE.jpg' %}" > <!-- imagen de talleres para C. Educativos -->
                       </div>
-                      <p class="slider--item-title">Implementacion de hardware</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Talleres para centros educativos</p>
+                      <p class="slider--item-description" style="text-align:justify;font-size:90%;">Aprende cómo usar las tecnologías del momento y donde aplicarlas con nuestros talleres interactivos y a la medida, impartidos por profesionales altamente calificados.</p>
                     </a>
                   </li>
                 </ul>
