agregados los servicios faltantes, con sus imagenes, titulos y descripcion

--- a/pagina/templates/pagina/index.html
+++ b/pagina/templates/pagina/index.html
@@ -93,7 +93,7 @@
                   <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="{% static 'img/SWM.jpg' %}" > <!-- imagen de desarrollo de software -->
+                        <img src="{% static 'img/SWM.png' %}" > <!-- imagen de desarrollo de software -->
                       </div>
                       <p class="slider--item-title">Desarrollo de software a la medida</p>
                       <p class="slider--item-description" style="text-align:justify;font-size:90%;">Sistemas a la medida multiplataforma para distintos tipos de empresas, utilizando lo último en tecnologías de desarrollo, otorgándoles a nuestros clientes soluciones de calidad a sus problemas.</p>
@@ -133,6 +133,33 @@
                       </div>
                       <p class="slider--item-title">Talleres para centros educativos</p>
                       <p class="slider--item-description" style="text-align:justify;font-size:90%;">Aprende cómo usar las tecnologías del momento y donde aplicarlas con nuestros talleres interactivos y a la medida, impartidos por profesionales altamente calificados.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item slider--item-right">
+                    <a href="#0">
+                      <div class="slider--item-image">
+                        <img src="{% static 'img/TE.png' %}" > <!-- imagen de talleres y conferencias para empresas -->
+                      </div>
+                      <p class="slider--item-title">Talleres y conferencias para empresas</p>
+                      <p class="slider--item-description" style="text-align:justify;font-size:90%;">Es indudable que las empresas de hoy necesitan innovación, déjanos ayudarte con esto, los talleres y conferencias que ofrecemos te abren las puertas a la tecnología y mejoran tu estatus empresarial.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item slider--item-right">
+                    <a href="#0">
+                      <div class="slider--item-image">
+                        <img src="{% static 'img/AS.jpg' %}" > <!-- imagen de Asesorías tecnológicas profesionales -->
+                      </div>
+                      <p class="slider--item-title">Asesorías tecnológicas profesionales</p>
+                      <p class="slider--item-description" style="text-align:justify;font-size:90%;">Methriks ofrece asesorías realizadas por ingenieros expertos en las áreas de sistemas, informática y computación, abarcando múltiples temas de interés para empresas, centros educativos y emprendedores.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item slider--item-right">
+                    <a href="#0">
+                      <div class="slider--item-image">
+                        <img src="{% static 'img/RE.png' %}" > <!-- imagen de Instalacion de redes para empresas -->
+                      </div>
+                      <p class="slider--item-title">Instalacion de redes para empresas</p>
+                      <p class="slider--item-description" style="text-align:justify;font-size:90%;">Contamos con un equipo altamente calificado para brindarle los servicios de: Cableado estructurado | Redes inalambricas (wifi) | Instalación de redes seguras | mantenimiento de redes.</p>
                     </a>
                   </li>
                 </ul>
