solucionado el error en el que los titulos se sobreponen en los servicios

--- a/pagina/templates/pagina/index.html
+++ b/pagina/templates/pagina/index.html
@@ -108,16 +108,16 @@
                       <p class="slider--item-description" style="text-align:justify;font-size:90%;">Desarrollo de aplicaciones móviles a la medida para los sistemas operativos más populares del mercado (iOS, Android y Windows Phone).</p>
                     </a>
                   </li>
-                  <li class="slider--item slider--item-right">
+                  <li class="slider--item">
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="{% static 'img/Startup.jpg' %}"> <!-- imagen de desarrollo de software startups -->
                       </div>
-                      <p class="slider--item-title">Soluciones tecnológicas para Startups</p>
+                      <p class="slider--item-title">Desarrollo para Startups</p>
                       <p class="slider--item-description" style="text-align:justify;font-size:90%;">Methriks codifica tus ideas y las convierte en el software o aplicación que tanto sueñas. Ofrecemos un equipo de ingenieros expertos para el desarrollo parcial o total del proyecto de tu Startup.</p>
                     </a>
                   </li>
-                  <li class="slider--item slider--item-right">
+                  <li class="slider--item">
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="{% static 'img/CCE.png' %}"> <!-- imagen de conferencias C. Educativos -->
@@ -126,7 +126,7 @@
                       <p class="slider--item-description" style="text-align:justify;font-size:90%;">Aprende y prepárate para el futuro, infórmate y conoce más sobre las nuevas tecnologías con nuestras conferencias especializadas y a la medida de lo que deseas aprender. Tus alumnos lo agradecerán.</p>
                     </a>
                   </li>
-                  <li class="slider--item slider--item-right">
+                  <li class="slider--item">
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="{% static 'img/TCE.jpg' %}" > <!-- imagen de talleres para C. Educativos -->
@@ -135,7 +135,7 @@
                       <p class="slider--item-description" style="text-align:justify;font-size:90%;">Aprende cómo usar las tecnologías del momento y donde aplicarlas con nuestros talleres interactivos y a la medida, impartidos por profesionales altamente calificados.</p>
                     </a>
                   </li>
-                  <li class="slider--item slider--item-right">
+                  <li class="slider--item">
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="{% static 'img/TE.png' %}" > <!-- imagen de talleres y conferencias para empresas -->
@@ -144,7 +144,7 @@
                       <p class="slider--item-description" style="text-align:justify;font-size:90%;">Es indudable que las empresas de hoy necesitan innovación, déjanos ayudarte con esto, los talleres y conferencias que ofrecemos te abren las puertas a la tecnología y mejoran tu estatus empresarial.</p>
                     </a>
                   </li>
-                  <li class="slider--item slider--item-right">
+                  <li class="slider--item">
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="{% static 'img/AS.jpg' %}" > <!-- imagen de Asesorías tecnológicas profesionales -->
@@ -153,7 +153,7 @@
                       <p class="slider--item-description" style="text-align:justify;font-size:90%;">Methriks ofrece asesorías realizadas por ingenieros expertos en las áreas de sistemas, informática y computación, abarcando múltiples temas de interés para empresas, centros educativos y emprendedores.</p>
                     </a>
                   </li>
-                  <li class="slider--item slider--item-right">
+                  <li class="slider--item">
                     <a href="#0">
                       <div class="slider--item-image">
                         <img src="{% static 'img/RE.png' %}" > <!-- imagen de Instalacion de redes para empresas -->
